# pong

./: .clang-format  CMakeLists.txt  CMakePresets.json  Readme.md  app.cpp  app.hpp  emscripten.txt  engine.hpp  font.hpp  main.cpp  rng.hpp  sfx.cpp  sfx.hpp  stb_vorbis.h  template.html
